--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev":"nodemon -r sucrase/register src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,17 @@
   "homepage": "https://github.com/JacksonLunkes/teste#readme",
   "dependencies": {
     "apollo-server": "^3.5.0",
-    "graphql": "^16.0.1"
+    "graphql": "^16.0.1",
+    "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.3.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.27.1",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "prettier": "^2.4.1"
   }
 }
