--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon -r sucrase/register src/index.js"
+    "dev": "nodemon -r sucrase/register src/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,9 +19,10 @@
   },
   "homepage": "https://github.com/JacksonLunkes/teste#readme",
   "dependencies": {
-    "apollo-server": "^3.5.0",
-    "graphql": "^16.0.1",
-    "nodemon": "^2.0.15"
+    "apollo-server": "^2.23.0",
+    "graphql": "^15.5.0",
+    "nodemon": "^2.0.15",
+    "sucrase": "^3.20.3"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.4.0",
