--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon -r sucrase/register src/index.js"
+    "dev": "nodemon -r sucrase/register src/index.js",
+    "server": "json-server --watch db.json"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,8 @@
   "dependencies": {
     "apollo-server": "^2.23.0",
     "graphql": "^15.5.0",
+    "json-server": "^0.17.0",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.15",
     "sucrase": "^3.20.3"
   },
